--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NewNotifierPopup.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Notifiers/NewNotifierPopup.cshtml
@@ -34,17 +34,12 @@
 @Scripts.Render("~/bundles/notifiers/notifier")
 <script type="text/javascript">
     function afterSuccessSubmit(result, state, response) {
-        if (result.success) {
-            window.returnValue = result.id;
-            try {
-                window.opener.NewNotifierEvent(result.id);
-            } catch (err) {
-            }
-            window.close();
-            return false;
-        } else {
-            var errMsg = result.error || 'Unknown error';
-            ShowToastMessage(errMsg, 'error', false);
+        window.returnValue = result;
+        try {
+            window.opener.NewNotifierEvent(result);
         }
+        catch (err) { }
+        window.close();
+        return false;
     }
 </script>
