--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.html
@@ -60,8 +60,8 @@
                         <mbsc-form-group-title>{{getSectionHeader(caseSectionTypes.CaseInfo)}}</mbsc-form-group-title>
                         <mbsc-form-group-content>
                                 <case-textbox-control *ngIf="hasField('CaseNumber')" [field]="getField('CaseNumber')" [form]="form"></case-textbox-control>
-                                <case-date-control *ngIf="hasField('RegTime')" [field]="getField('RegTime')" [form]="form"></case-date-control>
-                                <case-date-control *ngIf="hasField('ChangeTime')" [field]="getField('ChangeTime')" [form]="form"></case-date-control>
+                                <case-datetime-control *ngIf="hasField('RegTime')" [field]="getField('RegTime')" [form]="form"></case-datetime-control>
+                                <case-datetime-control *ngIf="hasField('ChangeTime')" [field]="getField('ChangeTime')" [form]="form"></case-datetime-control>
                                 <case-textbox-control *ngIf="hasField('User_Id')" [field]="getField('User_Id')" [form]="form"></case-textbox-control>
                                 <case-dropdown-control *ngIf="hasField('RegistrationSourceCustomer')" [field]="getField('RegistrationSourceCustomer')" [form]="form"  [dataSource]="dataSource.options.customerRegistrationSources"></case-dropdown-control>
                                 <case-multi-dropdown-control *ngIf="hasField('CaseType_Id')" [field]="getField('CaseType_Id')" [form]="form" [dataSource]="dataSource.options.caseTypes"></case-multi-dropdown-control>
@@ -80,7 +80,7 @@
                                 <case-textarea-control *ngIf="hasField('Miscellaneous')" [field]="getField('Miscellaneous')" [form]="form"></case-textarea-control>
                                 <case-switch-control *ngIf="hasField('ContactBeforeAction')" [field]="getField('ContactBeforeAction')" [form]="form"></case-switch-control>
                                 <case-switch-control *ngIf="hasField('SMS')" [field]="getField('SMS')" [form]="form" description="Send text message when case is closed"></case-switch-control>
-                                <case-date-control *ngIf="hasField('AgreedDate')" [field]="getField('AgreedDate')" [form]="form" type="date"></case-date-control>
+                                <case-date-control *ngIf="hasField('AgreedDate')" [field]="getField('AgreedDate')" [form]="form"></case-date-control>
                                 <case-textbox-control *ngIf="hasField('Available')" [field]="getField('Available')" [form]="form"></case-textbox-control>
                                 <case-textbox-control *ngIf="hasField('Cost')" [field]="getField('Cost')" [form]="form"></case-textbox-control>
                                 <case-textbox-control *ngIf="hasField('Cost_OtherCost')" [field]="getField('Cost_OtherCost')" [form]="form"></case-textbox-control>
@@ -101,8 +101,8 @@
                             <case-dropdown-control *ngIf="hasField('Problem')" [field]="getField('Problem')" [form]="form" [dataSource]="dataSource.options.problems"></case-dropdown-control>
                             <case-dropdown-control *ngIf="hasField('CausingPart')" [field]="getField('CausingPart')" [form]="form" ></case-dropdown-control>
                             <case-dropdown-control *ngIf="hasField('Change')" [field]="getField('Change')" [form]="form" [dataSource]="dataSource.options.changes"></case-dropdown-control>
-                            <case-date-control *ngIf="hasField('PlanDate')" [field]="getField('PlanDate')" [form]="form" type="date"></case-date-control>
-                            <case-date-control *ngIf="hasField('WatchDate')" [field]="getField('WatchDate')" [form]="form" type="date"></case-date-control>
+                            <case-datetime-control *ngIf="hasField('PlanDate')" [field]="getField('PlanDate')" [form]="form"></case-datetime-control>
+                            <case-datetime-control *ngIf="hasField('WatchDate')" [field]="getField('WatchDate')" [form]="form"></case-datetime-control>
                             <case-switch-control *ngIf="hasField('Verified')" [field]="getField('Verified')" [form]="form"></case-switch-control>
                             <case-textarea-control *ngIf="hasField('VerifiedDescription')" [field]="getField('VerifiedDescription')" [form]="form"></case-textarea-control>
                             <case-dropdown-control *ngIf="hasField('SolutionRate')" [field]="getField('SolutionRate')" [form]="form" [dataSource]="dataSource.options.solutionsRates"></case-dropdown-control>
@@ -114,7 +114,7 @@
                         <mbsc-form-group-content>
                             <case-textarea-control *ngIf="hasField('FinishingDescription')" [field]="getField('FinishingDescription')" [form]="form"></case-textarea-control>
                             <case-multi-dropdown-control *ngIf="hasField('ClosingReason')" [field]="getField('ClosingReason')" [form]="form" [dataSource]="dataSource.options.closingReasons"></case-multi-dropdown-control>
-                            <case-date-control *ngIf="hasField('FinishingDate')" [field]="getField('FinishingDate')" [form]="form" type="date"></case-date-control>
+                            <case-date-control *ngIf="hasField('FinishingDate')" [field]="getField('FinishingDate')" [form]="form"></case-date-control>
                         </mbsc-form-group-content>
                     </mbsc-form-group> -->
                     
@@ -123,7 +123,7 @@
                         <mbsc-form-group-content>
                             <case-textarea-control *ngIf="hasField('FinishingDescription')" [field]="getField('FinishingDescription')" [form]="form" [readonly]="true"></case-textarea-control>
                             <case-multi-dropdown-control *ngIf="hasField('ClosingReason')" [field]="getField('ClosingReason')" [form]="form" [dataSource]="dataSource.options.closingReasons" [readonly]="true"></case-multi-dropdown-control>
-                            <case-date-control *ngIf="hasField('FinishingDate')" [field]="getField('FinishingDate')" [form]="form" type="date" [readonly]="true"></case-date-control>
+                            <case-date-control *ngIf="hasField('FinishingDate')" [field]="getField('FinishingDate')" [form]="form" [readonly]="true"></case-date-control>
                         </mbsc-form-group-content>
                     </mbsc-form-group>
                     
