--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/date/case-date-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/date/case-date-control.component.html
@@ -1,4 +1,2 @@
-<ng-container [formGroup]="form">
-    <mbsc-datetime *ngIf="type==='datetime'" [formControlName]="field.name" [options]="options">{{field.label}}</mbsc-datetime>
-    <mbsc-date *ngIf="type==='date'" [formControlName]="field.name" [options]="options">{{field.label}}</mbsc-date>
-</ng-container>
+<mbsc-date #date [(ngModel)]="value" [options]="options" [hidden]="options.disabled">{{field.label}}</mbsc-date>
+<mbsc-input [ngModel]="value | dateTz: 'L'" [hidden]="!options.disabled" disabled>{{field.label}}</mbsc-input>
