--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
@@ -20,7 +20,7 @@
         <mbsc-listview #listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)" (touchmove)="checkLoad()">
                 <mbsc-listview-item *ngFor="let case of cases; trackBy: trackByFn" >
                         #{{(case.columns | getByKey: 'CaseNumber') || '&nbsp;'}}
-                        <div>{{(case.columns | getByKey: 'RegTime') || '&nbsp;'}}</div> <!-- TODO: use ISO date instead of string and format -->   
+                        <div>{{(case.columns | getByKey: 'RegTime' | dateTz) || '&nbsp;'}}</div> <!-- TODO: use ISO date instead of string and format -->   
                         <div>{{(case.columns | getByKey: 'Caption') || '&nbsp;'}}</div>
                 </mbsc-listview-item>
         </mbsc-listview>
