--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.scss
@@ -1,3 +1,5 @@
-.mbsc-scv, .mbsc-scv-sc, .mbsc-scv-item {
-    width: 100%;
+.md-paging {
+    .mbsc-scv, .mbsc-scv-sc, .mbsc-scv-item {
+        width: 100%;
+    }    
 }
