--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
@@ -13,5 +13,5 @@
     </form>    
 </mbsc-form>
 <div class="footer">
-    <app-footer></app-footer>
-</div>    
+    <p style="text-align:center"><img src="/content/img/dh_solutions_version.png" /></p>
+</div>
