--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
@@ -1,2 +1,17 @@
-<app-cases-overview></app-cases-overview>
+<div class="header mbsc-padding">
+    <h1 class="mbsc-align-center">dh | helpdesk</h1>
+</div>
+<div class="mbsc-padding">
+    <p class="mbsc-bold">DH Helpdesk - Beta version​</p>
+    <p>
+        We have finally released a beta version of DH Helpdesk for mobile users. In this release you can view and search for existing cases.
+    </p>
+    <p>
+        Please give us feedback on <a href="mailto:support@dhsolutions.se">support@dhsolutions.se</a>​.
+    </p>
+    <p>
+        Regards<br>
+        DH Helpdesk Development team​
+    </p>
+</div>
     
