--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
@@ -4,7 +4,11 @@
     font-size: 80px;
     text-align: center;
     height: 46px;
-    margin: 130px 0 30px 0;
+    margin: 0 0 30px 0;
     //color: #1c75bc;
 }
 
+.footer p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
