--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.scss
@@ -1,4 +1,4 @@
-mbsc-button {
+/* mbsc-button {
     height: 100%;
     ::ng-deep button {
         &.mbsc-btn {
@@ -6,11 +6,12 @@ mbsc-button {
             margin: 0;
         }
     }
-}
+} */
 
 div {
     &.mbsc-col-sm-auto {
         padding-left: 0;
+        margin: auto;
     }
 }
 
@@ -20,14 +21,3 @@ div {
     max-height: 500px;
 } */
 
-mbsc-form {
-    .mbsc-form-group-title {
-        border-bottom: 0;
-    }
-    .mbsc-form-group {
-        margin-top: 0;
-    }
-    &.md-load-btn {
-        padding-top: 0px;
-    }
-}
