--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
@@ -1,6 +1,4 @@
-<div class="header mbsc-padding">
-    <h1 class="mbsc-align-center">dh | helpdesk</h1>
-</div>
+<app-header-title></app-header-title>
 <div class="mbsc-padding">
     <p class="mbsc-bold">DH Helpdesk - Beta version​</p>
     <p>
