--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/case-files/case-files-control.component.html
@@ -1,10 +1,10 @@
 <div class="case-subsection">
-<span class="mbsc-label">Files</span>
-<ul class="nolist">
-  <li *ngFor="let item of getFilesModel();trackBy:identify">
-    <div class="mbsc-ic mbsc-ic-fa-paperclip">&nbsp;
-      <a (click)="downloadFile(item)">{{ item.fileName }}</a>
-    </div>
-  </li>
-</ul>
+<span class="mbsc-label case-subsection-title">Files</span>
+  <ul class="filelist">
+      <li *ngFor="let item of getFilesModel();trackBy:identify">
+        <div class="mbsc-ic mbsc-ic-fa-paperclip">
+            <a (click)="downloadFile(item)">{{ item.fileName }}</a>
+        </div>
+      </li>
+  </ul>
 </div>
