--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/case-files/case-files-control.component.html
@@ -2,7 +2,7 @@
 <span class="mbsc-label">Files</span>
 <ul class="nolist">
   <li *ngFor="let item of getFilesModel();trackBy:identify">
-    <div class="mbsc-ic mbsc-ic-foundation-paperclip">&nbsp;
+    <div class="mbsc-ic mbsc-ic-fa-paperclip">&nbsp;
       <a (click)="downloadFile(item)">{{ item.fileName }}</a>
     </div>
   </li>
