Case Overview header redisign

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
@@ -1,13 +1,22 @@
 <mbsc-form class="case-overview-header">
         <div class="mbsc-form-group">
                 <form [formGroup]="filtersForm" novalidate (ngSubmit)="applyFilterAndSearch()">
-                        <div class="mbsc-grid mbsc-grid-sm">
-                                <div class="mbsc-row">
+                        <div class="mbsc-grid mbsc-grid-sm" >
+                                <div class="mbsc-row" *ngIf="_showSearchPanel">
                                         <div class="mbsc-col">
                                                 <mbsc-input formControlName="freeSearch" icon="fa-search"  placeholder="Search"></mbsc-input>
                                         </div>
-                                        <div class="mbsc-col-sm-auto md-load-btn">
+                                        <div class="mbsc-col-sm-auto">
                                                 <a [ngClass]="{'inactive':isLoading}" (click)="cancelSearch()">Cancel</a>
+                                        </div>
+                                </div>
+                                <div class="mbsc-row" *ngIf="!_showSearchPanel">
+                                        <div class="mbsc-col center bold">
+                                                Case overview
+                                        </div>  
+                                        <div class="mbsc-col-sm-auto">
+                                                 <div class="mbsc-ic mbsc-ic-fa-search" (click)="_showSearchPanel=true">
+                                                 </div>        
                                         </div>
                                 </div>
                         </div>
